--- a/practicas/practica03/ejer04/css/styles.css
+++ b/practicas/practica03/ejer04/css/styles.css
@@ -1,11 +1,10 @@
 :root {
-  --green: #2CBF04;
-  --blue: #292D73;
+  --secondary: #3f2973;
 }
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%;  /* 1rem = 10px */
+  font-size: 62.5%; /* 1rem = 10px */
 }
 
 *,
@@ -17,11 +16,12 @@ html {
 body {
   font-family: 'Ubuntu', sans-serif;
   font-size: 1.6rem;
-  
+
   min-height: 100vh;
   padding: 4.8rem 0 10rem 0;
 
-  background-image: url('../img/portal.jpg');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)),
+    url('../img/portal.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -38,11 +38,11 @@ body {
   padding: 1.2rem;
   border-radius: 6px;
   cursor: pointer;
-  background-color: #fff;
 }
 
-.btn:hover {
-  background-color: #f2f2f2;
+.glass {
+  backdrop-filter: blur(15px);
+  box-shadow: 0px 12px 16px -4px rgba(0, 0, 0, 0.3);
 }
 
 .episodes {
@@ -58,14 +58,13 @@ body {
 }
 
 .episode {
-  background-color: rgba(255, 255, 255, 0.8);
-  backdrop-filter: blur(10px);
+  background-color: rgba(255, 255, 255, 0.3);
   border-radius: 0.5rem;
-  box-shadow: 0px 8px 12px -4px rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 1.4rem;
+  color: #1f1f1f;
 }
 
 .episode__info {
@@ -76,7 +75,7 @@ body {
   font-size: 2em;
   margin: 0 0 1rem;
   position: relative;
-  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.4);
+  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
 .episode__name::before {
@@ -86,19 +85,20 @@ body {
   content: '';
   width: 12%;
   height: 0.15em;
-  background-color: var(--blue);
-  box-shadow: 0px 1px 2px rgba(41, 45, 115, 0.4);
+  background-color: var(--secondary);
+  box-shadow: 0px 1px 2px rgba(45, 29, 82, 0.3);
+  border-radius: 1.5px;
 }
 
 .episode__episode {
-  color: var(--green);
-  text-shadow: 0px 1px 1px rgba(0, 75, 0, 0.4);
+  color: var(--secondary);
+  text-shadow: 0px 1px 2px rgba(45, 29, 82, 0.3);
   font-weight: 700;
   margin-right: 0.25em;
 }
 
 .episode__air-date {
-  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.4);
+  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
 .pagination {
@@ -112,16 +112,13 @@ body {
 }
 
 .pagination__btn {
+  background-color: rgba(255, 255, 255, 0.5);
   font-weight: 700;
-  box-shadow: 
-    0 1px 2px 0px rgba(0, 0, 0, 0.3),
+  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.3),
     0 4px 16px 0px rgba(0, 0, 0, 0.3);
 }
 
 .pagination__btn--selected {
-  background-color: #cccccc;
-}
-
-.pagination__btn--selected:hover {
-  background-color: #c4c4c4;
+  background-color: rgba(255, 255, 255, 0.75);
 }
