--- a/practicas/practica03/ejer04/css/styles.css
+++ b/practicas/practica03/ejer04/css/styles.css
@@ -45,6 +45,11 @@ body {
   box-shadow: 0px 12px 16px -4px rgba(0, 0, 0, 0.3);
 }
 
+.glass--sm {
+  backdrop-filter: blur(5px);
+  box-shadow: 0px 12px 16px -4px rgba(0, 0, 0, 0.3);
+}
+
 .episodes {
   display: grid;
   gap: 2rem;
