--- a/practicas/practica03/ejer04/css/styles.css
+++ b/practicas/practica03/ejer04/css/styles.css
@@ -65,12 +65,28 @@ body {
 
 .episode {
   border-radius: 0.5rem;
+  cursor: pointer;
+  padding: 1.4rem;
+  transition: 0.25s ease-in-out;
+  position: relative;
+  z-index: 0;
+}
+
+.episode > a {
+  color: #1f1f1f;
+  text-decoration: none;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 1.4rem;
-  color: #1f1f1f;
 }
+
+.episode:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 20px 24px -6px rgba(0, 0, 0, 0.3);
+  z-index: 1;
+}
+
 
 .episode__info {
   margin: 0.25em 0 0 0;
