--- a/practicas/practica03/ejer04/css/styles.css
+++ b/practicas/practica03/ejer04/css/styles.css
@@ -119,8 +119,52 @@ body {
 }
 
 .episode__air-date {
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
+}
+
+/* 
+  NO-EPISODES
+*/
+
+.no-episodes {
+  border-radius: 0.5rem;
+  padding: 3.2rem;
+  background-color: rgba(255, 255, 255, 0.3);
+
+}
+
+.no-episodes__gif {
+  max-width: 100%;
+  display: none;
+  filter: drop-shadow(0px 8px 6px rgba(0, 0, 0, 0.3));
+}
+
+.no-episodes__details {
+  font-size: 1.2em;
+  font-weight: 700;
   text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
 }
+
+.no-episodes__meeseeks {
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
+}
+
+@media (min-width: 768px) {
+  .no-episodes {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
+    gap: 2rem;
+  }
+
+  .no-episodes__gif {
+    display: block;
+  }
+}
+
+/* 
+  PAGINATION
+*/
 
 .pagination {
   position: fixed;
