--- a/practicas/practica03/ejer04/css/styles.css
+++ b/practicas/practica03/ejer04/css/styles.css
@@ -1,3 +1,7 @@
+/* 
+  GLOBAL
+*/
+
 :root {
   --secondary: #3f2973;
 }
@@ -44,12 +48,18 @@ body {
 .glass {
   background-color: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(15px);
-  box-shadow: 0px 12px 16px -4px rgba(0, 0, 0, 0.3);
+  box-shadow: 
+    0 6px 4px -6px rgba(0, 0, 0, 0.3),
+    0 12px 36px -6px rgba(0, 0, 0, 0.15);
 }
 
 .glass--sm {
   backdrop-filter: blur(5px);
 }
+
+/* 
+  EPISODES
+*/
 
 .episodes {
   display: grid;
@@ -62,6 +72,10 @@ body {
   margin: 0;
   padding: 0;
 }
+
+/*
+  EPISODE
+*/
 
 .episode {
   border-radius: 0.5rem;
@@ -83,7 +97,9 @@ body {
 
 .episode:hover {
   background-color: rgba(255, 255, 255, 0.5);
-  box-shadow: 0px 20px 24px -6px rgba(0, 0, 0, 0.3);
+  box-shadow: 
+    0 12px 12px -6px rgba(0, 0, 0, 0.3),
+    0 24px 48px -6px rgba(0, 0, 0, 0.15);
   z-index: 1;
 }
 
@@ -113,7 +129,7 @@ body {
 
 .episode__episode {
   color: var(--secondary);
-  text-shadow: 0px 1px 2px rgba(45, 29, 82, 0.3);
+  text-shadow: 0px 1px 1px rgba(45, 29, 82, 0.3);
   font-weight: 700;
   margin-right: 0.25em;
 }
@@ -189,6 +205,10 @@ body {
   background-color: rgba(255, 255, 255, 0.75);
 }
 
+/* 
+  SEARCH
+*/
+
 .search {
   display: flex;
   justify-content: center;
@@ -211,8 +231,10 @@ body {
 }
 
 .search__input:focus {
-  background-color: rgba(255, 255, 255, 0.75);
-  box-shadow: 0px 20px 24px -6px rgba(0, 0, 0, 0.3);
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 
+    0 12px 12px -6px rgba(0, 0, 0, 0.3),
+    0 24px 48px -6px rgba(0, 0, 0, 0.15);
 }
 
 .search__btn {
@@ -222,11 +244,16 @@ body {
 }
 
 .search__btn:hover {
-  background-color: rgba(255, 255, 255, 0.75);
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 
+    0 12px 12px -6px rgba(0, 0, 0, 0.3),
+    0 24px 48px -6px rgba(0, 0, 0, 0.15);
 }
 
 .search__btn:active {
-  box-shadow: 0px 4px 8px -2px rgba(0, 0, 0, 0.3);
+  box-shadow: 
+    0 3px 6px -4px rgba(0, 0, 0, 0.3),
+    0 4px 8px -2px rgba(0, 0, 0, 0.15);
 }
 
 .search__btn img {
