--- a/practicas/practica03/ejer04/css/styles.css
+++ b/practicas/practica03/ejer04/css/styles.css
@@ -65,7 +65,7 @@ body {
   display: grid;
   gap: 2rem;
   grid-template-columns: repeat(auto-fill, 320px);
-  grid-auto-rows: 1fr;
+  grid-auto-rows: 11em;
   justify-content: center;
 
   list-style: none;
@@ -152,7 +152,7 @@ body {
 .no-episodes__gif {
   max-width: 100%;
   display: none;
-  filter: drop-shadow(0px 8px 6px rgba(0, 0, 0, 0.3));
+  filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.3));
 }
 
 .no-episodes__details {
